gave app a min height, and added media query to prevent double scrollbar from appearing when screen is resized to less than 600px height in initial mode

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 :root {
+	--minHeight-app: 600px;
 	--width-filterContent: 400px;
 	--color-accent: hsl(10, 29%, 42%);
 	--color-dark: hsl(10, 29%, 20%);
@@ -15,6 +16,7 @@ body {
 }
 
 #app {
+	min-height: var(--minHeight-app);
 	display: grid;
 	grid-template-columns: var(--width-filterContainer) 1fr;
 	/* Note: --width-filterContainer is set within the 'initial mode' and 'adjacent mode' classes */
@@ -30,6 +32,7 @@ body {
 #filter-container {
 	height: 100vh;
 	height: 100dvh;
+	min-height: 100%;
 	background-color: var(--color-accent);
 
 	display: flex;
@@ -40,9 +43,10 @@ body {
 
 #filter-content {
 	width: var(--width-filterContent);
-	padding-inline: 2rem;
+	padding-inline: 3rem;
 	display: flex;
 	flex-direction: column;
+	gap: 2.25rem;
 }
 
 #filter-header {
@@ -52,7 +56,6 @@ body {
 	flex-direction: column;
 	text-align: center;
 	gap: 0.5rem;
-	padding: 1rem;
 
 	margin: auto;
 	transition: margin 0.5s ease;
@@ -65,12 +68,11 @@ body {
 
 #filter-paragraph {
 	width: 100%;
-	padding: 1rem;
 
 	display: flex;
 	flex-flow: column nowrap;
 	justify-content: center;
-	gap: 1.5rem;
+	gap: 1.25rem;
 
 	font-size: 1rem;
 	color: var(--color-bg);
@@ -81,14 +83,14 @@ body {
 }
 
 button {
-	/* width: 5rem; */
-	height: 3.5rem;
-	padding-inline: 1ch;
+	width: fit-content;
+	height: 3rem;
+	padding-inline: 1.5ch;
+	margin: auto;
 	border-radius: 6px;
 	background-color: var(--color-accent);
 	border: 2px solid var(--color-bg);
-	border-top: 3px solid var(--color-bg);
-	border-left: 3px solid var(--color-bg);
+	border-bottom: 4px solid var(--color-bg);
 	font-size: 1rem;
 	font-weight: bold;
 	color: var(--color-bg);
@@ -128,6 +130,7 @@ select {
 	background-color: var(--color-bg);
 	/* width: 100%; */
 	height: fit-content;
+	min-height: 100%;
 }
 
 button#return-to-filters {
@@ -187,4 +190,18 @@ button#return-to-filters {
 	height: 100vh;
 	height: 100dvh;
 	overflow-y: scroll;
+}
+
+@media (max-height: 599px) {
+	#app.initialMode {
+		overflow-y: hidden;
+	}
+	/* .adjacentMode #filter-container {
+		height: 100%;
+	}
+
+	.adjacentMode #result-container {
+		height: fit-content;
+		overflow-y: hidden;
+	} */
 }
